argocd/infrastructure/argocd-ingress/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: "132.226.43.62"
spec:
  parentRefs:
  - name: public-gateway
    namespace: default
    sectionName: https-argocd
  hostnames:
  - "cd.k3s.sudhanva.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-redirect
  namespace: argocd
spec:
  parentRefs:
  - name: public-gateway
    namespace: default
    sectionName: http
  hostnames:
  - "cd.k3s.sudhanva.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
